// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading should render 1`] = `
<div>
  <div
    class="css-sidcim"
  >
    <p
      class="chakra-text css-1i3wv1p"
    >
      Loading
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`loading should render custom text 1`] = `
<div>
  <div
    class="css-sidcim"
  >
    <p
      class="chakra-text css-1i3wv1p"
    >
      Loading memes
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`loading should render custom text and size 1`] = `
<div>
  <div
    class="css-n4refw"
  >
    <p
      class="chakra-text css-1i3wv1p"
    >
      Loading memes
    </p>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
